Fixed CustomParsingProfile serialization